# TC-Mult-Code

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: benchmark.cu  common.cuh  example_base.cu  example_tc_mult.cu  verify_all.cu
include/tc_mult/: tc_mult.h
src/base/: tc_mult_base.cu
src/baselines/: tc_mult_cgbn.cu  tc_mult_gpuntt.cu
src/private/: tc_mult_api.cu  tc_mult_private_test.hpp
